[tool.poetry]
name = "laxrgeocode"
version = "1.0.0"
description = ""
authors = ["Ryuuji Yoshimoto <ryuuji@calil.jp>"]

[tool.poetry.dependencies]
python = "^3.10"
Shapely = "^1.8.0"
orjson = "^3.9.15"
click = "^8.0.3"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
